--- a/index.html
+++ b/index.html
@@ -708,7 +708,10 @@ https://templatemo.com/tm-570-chain-app-dev
         <div class="col-lg-12">
           <div class="copyright-text">
             <p>Copyright © 2022 Chain App Dev Company. All Rights Reserved. 
-          <br>Design: <a href="https://templatemo.com/" target="_blank" title="css templates">TemplateMo</a></p>
+          <br>Design: <a href="https://templatemo.com/" target="_blank" title="css templates">TemplateMo</a><br>
+        
+          Distributed By: <a href="https://themewagon.com/" target="_blank" title="Bootstrap Template World">ThemeWagon</a>
+        </p>
           </div>
         </div>
       </div>
